tenzir/bats/data/reference/every/test_every_errors/step_01.ref
error: expected a positive duration, got -1000000000ns
 --> <input>:1:7
  |
1 | every -1s { version }
  |       ^^^ 
  |